--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,15 @@
     <li><a href="/">ホーム</a></li>
     <li><%=link_to "一覧",blogs_path %></li>
     <li><%=link_to "つぶやく",new_blog_path %></li>
+    <% if logged_in? %>
+    <li><%= link_to "お気に入り", user_path(current_user.id) %></li>
+    <li><%= link_to'ブログ一覧画面を確認する',blogs_path %></li>
+    <li><%= link_to 'ユーザー一覧', users_path %></li>
+    <li><%= link_to "Logout", session_path(current_user.id), method: :delete %></li>
+    <% else %>
+    <li><%= link_to "Sign up", new_user_path %></li>
+    <li><%= link_to "Login", sessions_path %></li>
+    <% end %>
   </ul>
 </header>
 
@@ -22,16 +31,6 @@
     <%= content_tag(:div, value, class: "#{key}") %>
     <% end %>
 
-    <% if logged_in? %>
-      <!-- <%= link_to "Profile", user_path(current_user.id) %> -->
-      <%= link_to "お気に入り", user_path(current_user.id) %>
-      <%= link_to'ブログ一覧画面を確認する',blogs_path %>
-      <%= link_to "Logout", session_path(current_user.id), method: :delete %>
-    <% else %>
-      <%= link_to "Sign up", new_user_path %>
-      <%= link_to "Login", new_session_path %>
-    <% end %>
-    
    <div class ="main">
     <%= yield %>
    </div>
