--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,13 +1,12 @@
-<h1>日々つれづれ</h1>
+<h1>徒然日記</h1>
 
 <div class="container">
   <div class="row">
     <div class="col-lg-12 mb30">
-       <%= image_tag 'top.png' %>
+       <%= image_tag 'top2.png' %>
     </div>
     <div class="col-lg-12"><br><br>
-      <p>これはbootstrapの課題です。<br>bootstrapをちゃんと使えてるかな</p>
-      <p>課題をクリアできるかな。</p>
+      
     </div>
   </div>
 </div>
