--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -3,6 +3,10 @@
 	padding: 10px 0;
 	border-bottom: 1px solid #ccc;
 }
+
+li{
+  list-style: none;
+}
 .contents li{
     background-color:#FFF8E8;
     color:black;
@@ -10,6 +14,7 @@
     box-sizing: border-box;
     border: solid 1px #fff;
     margin-bottom: 15px;
+    list-style: none;
 }
 label {
 	display: inline-block;
