--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,8 @@
  <h2>ユーザー</h2>
   <% @users.each do |user| %>
+  <% if logged_in? && user.id != current_user.id %>
     <%= user.name %>
     <%= user.email %>
     <%= render 'follow_form', user: user %>
+   <% end %>
   <% end %>
