--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -30,3 +30,14 @@ label {
 .container {
   margin-bottom: 150px;
 }
+
+div {
+  text-align: center;
+  border-style: solid;
+  border-width: 0px;
+}
+
+table {
+  margin-left: auto;
+  margin-right: auto
+}
