--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,4 @@
-<h1><%= @user.name %>のページ</h1>
-
-<p>メールアドレス: <%= @user.email %></p>
-<p>イメージ: <%= image_tag @user.image %></p>
+<h1><%= @user.name %>のお気に入り</h1>
 
 <div>
     <table border="0">
